fix: event overlapping background events

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -78,3 +78,8 @@
 .fc-bg-event {
   @apply bg-fc-bg-event;
 }
+
+.fc-event.overlap-event {
+  width: 75% !important;
+  margin-left: auto;
+}
